# chatbot_ecommerce

./: .gitignore  RAG_tiki_chatbot.ipynb  README.md  app.py  benchmark.py  benchmark_indices.py  benchmark_results.csv  convert_index.py  main.py  requirements.txt  streamlit_app.py  utils.py  utils_local.py  visualize_faiss_benchmark.py
backend/: .gitignore  Dockerfile  README.md  requirements.txt  start.sh  utils.py
frontend/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  start.sh  utils_local.py  visualize_benchmark.py
restfulAPI_LLM/: app.py  demo_rag.py  requirements.txt
restfulAPI_LLM/src/: __init__.py  config.py
restfulAPI_LLM/src/api/: __init__.py  chat.py  product.py
restfulAPI_LLM/src/db/: pinecone.py
restfulAPI_LLM/src/models/: product.py
restfulAPI_LLM/src/services/: ecommerce_service.py  llm_service.py
restfulAPI_LLM/src/utils/: helpers.py
restfulAPI_LLM/tests/: test_chat.py  test_product.py
shared/: build_index.py  check_index.py  find_test_books.py
