[tool.poetry]
name = "tiki-chatbot-frontend"
version = "0.1.0"
description = "Streamlit frontend for Tiki Book Chatbot"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = ">=1.32.0"
pandas = "*"
numpy = "*"
sentence-transformers = "*"
faiss-cpu = "*"
google-generativeai = "*"
python-dotenv = "*"
plotly = ">=5.18.0"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"